add money change

--- a/addmoney.html
+++ b/addmoney.html
@@ -136,7 +136,7 @@
                             </label>
                         </div>
                         <div class="form-control mt-6">
-                            <button id="add-money" class="btn btn-primary">Login</button>
+                            <button id="add-money" class="btn btn-primary">Add Money</button>
                         </div>
                     </form>
                 </div>
